--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
     "description": "Aplikacja przydziału tematu pracy i promotora",
     "main": "index.js",
     "scripts": {
-      "start": "node index.js"
+        "start": "node index.js"
     },
     "dependencies": {
-      "dotenv": "^16.4.5",
-      "express": "^4.18.2",
-      "openai": "^4.72.0"
+        "dotenv": "^16.4.5",
+        "ejs": "^3.1.10",
+        "express": "^4.21.2",
+        "openai": "^4.96.0"
     }
-  }
-  
+}
