--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "dotenv": "^16.4.5",
         "ejs": "^3.1.10",
         "express": "^4.21.2",
+        "express-ejs-layouts": "^2.5.1",
         "openai": "^4.96.0"
     }
 }
