--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
         "start": "node index.js"
     },
     "dependencies": {
+        "body-parser": "^2.2.0",
         "dotenv": "^16.4.5",
         "ejs": "^3.1.10",
         "express": "^4.21.2",
         "express-ejs-layouts": "^2.5.1",
+        "nodemailer": "^7.0.3",
         "openai": "^4.96.0"
     }
 }
