--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "ejs": "^3.1.10",
         "express": "^4.21.2",
         "express-ejs-layouts": "^2.5.1",
+        "express-session": "^1.18.1",
         "nodemailer": "^7.0.3",
         "openai": "^4.103.0"
     }
